--- a/config.yaml
+++ b/config.yaml
@@ -18,29 +18,29 @@ varnish: aseetharam/varnish
 # carpentry_description: "Custom Carpentry"
 
 # Overall title for pages.
-title: 'Lesson Title'
+title: 'RNA-seq analysis with Bioconductor'
 
 # Date the lesson was created (YYYY-MM-DD, this is empty by default)
 created: '2024-08-30'
 
 # Comma-separated list of keywords for the lesson
-keywords: 'software, data, lesson, The Carpentries'
+keywords: 'software, data, lesson, RNA-seq, Bioconductor'
 
 # Life cycle stage of the lesson
 # possible values: pre-alpha, alpha, beta, stable
-life_cycle: 'pre-alpha'
+life_cycle: 'stable'
 
 # License of the lesson materials (recommended CC-BY 4.0)
 license: 'CC-BY 4.0'
 
 # Link to the source repository for this lesson
-source: 'https://example.com/FIXME-template-source'
+source: 'https://aseetharam.github.io/rcac_rnaseq_workshop'
 
 # Default branch of your lesson
 branch: 'main'
 
 # Who to contact if there are any issues
-contact: 'team@carpentries.org'
+contact: 'aseethar@purdue.edu'
 
 # Navigation ------------------------------------------------
 #
@@ -66,7 +66,7 @@ contact: 'team@carpentries.org'
 
 # Order of episodes in your lesson
 episodes: 
-- introduction.Rmd
+- 01-intro-to-rnaseq.Rmd
 
 # Information for Learners
 learners: 
