--- a/config.yaml
+++ b/config.yaml
@@ -67,6 +67,14 @@ contact: 'aseethar@purdue.edu'
 # Order of episodes in your lesson
 episodes: 
 - 01-intro-to-rnaseq.Rmd
+- 02-setup.Rmd
+- 03-import-annotate.Rmd
+- 04-exploratory-qc.Rmd
+- 05-differential-expression.Rmd
+- 06-extra-design.Rmd
+- 07-gene-set-analysis.Rmd
+- 08-next-steps.Rmd
+
 
 # Information for Learners
 learners: 
