added new sections

--- a/config.yaml
+++ b/config.yaml
@@ -69,6 +69,7 @@ episodes:
 - 01-intro-to-rnaseq.Rmd
 - 01a-from-reads-to-counts.Rmd
 - 01b-mapping-reads.Rmd
+- 01c-count-features.Rmd
 - 02-setup.Rmd
 - 03-import-annotate.Rmd
 - 04-exploratory-qc.Rmd
